# mono-contract

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json  rustfmt.toml
apps/frontend/: package.json
apps/frontend/prisma/: dev.db  dev.db-journal
apps/frontend/src/: env.local
apps/frontend/src/components/: D3Script.tsx  D3Test.tsx  DepartmentUtilization.tsx  LeastUsedApps.tsx  MostUsedApps.tsx  MostUsedAppsUpdate.tsx  NavbarLink.tsx  NavbarLinksGroup.tsx  Renewals.tsx  SearchInput.tsx  StatsCard.tsx  TableSort.tsx  TestChart.tsx  commonInterfaces.tsx
apps/frontend/src/components/layouts/: Dashboard.tsx  Webpage.tsx
apps/frontend/src/data/: apps.json  contracts.json  dashboard.json  demo_athena.json  department.json  employees.json  employeesDemo.json  employeesToAdd.json  mostUsedApps.json  pending.json  renewals.json
apps/frontend/src/data/vendors/: salesforce.json  vendors.json
apps/frontend/src/pages/: _app.tsx  asefanasef.tsx  contracts.tsx  departments.tsx  employees.tsx  index.tsx  individual-employee.tsx  renewals.tsx
apps/frontend/src/pages/add-software/: index.tsx  salesforce.tsx
apps/frontend/src/pages/api/: UploadFileDetails.ts  UploadFileToS3.ts  addSoftware.ts
apps/frontend/src/pages/custom/: DataCard.tsx
apps/frontend/src/utils/: search.tsx
apps/job-updater/: Cargo.toml
apps/job-updater/src/: main.rs
migrations/: 20230517191814_metrics-tables.down.sql  20230517191814_metrics-tables.up.sql  20230528174727_vendor-enum.down.sql  20230528174727_vendor-enum.up.sql
(+2 files in other folders)
