[package]
name = "job-updater"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = "0.7"
lambda_runtime = "0.8.0"
serde = "1.0.163"
tokio = { version = "1", features = ["full", "macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "mysql" ] }
db_schema = { path = "../../packages/db-schema" }

# Use cargo cmd <COMMAND_NAME> to run
[package.metadata.commands]
lint = "clippy --no-deps"
